doc: ti: j7200_evm: Fix OPTEE platform name
k3-j7200 does not exist in upstream OPTEE. Use j721e as the platform
name. Using k3-j7200 as OPTEE name results in broken boot due to wrong
configuration being picked.

Fixes: c727b81d6530 ("doc: board: ti: k3: Reuse build instructions")
Signed-off-by: Nishanth Menon <nm@ti.com>

--- a/doc/board/ti/j7200_evm.rst
+++ b/doc/board/ti/j7200_evm.rst
@@ -71,7 +71,7 @@ Set the variables corresponding to this platform:
  $ export TFA_BOARD=generic
  $ # we dont use any extra TFA parameters
  $ unset TFA_EXTRA_ARGS
- $ export OPTEE_PLATFORM=k3-j7200
+ $ export OPTEE_PLATFORM=k3-j721e
  $ # we dont use any extra OP-TEE parameters
  $ unset OPTEE_EXTRA_ARGS
 
